<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/repas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repas"
        android:textColor="@color/colorAccent"
        android:textSize="28sp"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="16dp" />

    <GridLayout
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="4"
        android:layout_width="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entree"
            android:textSize="25sp"
            android:layout_marginTop="50dp"/>


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:text="Votre entrée"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/principale"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:text="Votre plat principal"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fromage"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fruit"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="On coche :"
            android:textSize="24dp"
            />
        <RadioGroup>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/midi"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soir"/>
        </RadioGroup>

       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/valider"
           android:layout_marginLeft="20dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/annuler"/>




    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>